--- a/react-tutorial-master/public/index.html
+++ b/react-tutorial-master/public/index.html
@@ -14,20 +14,7 @@
   <body>
     <div id="content"></div>
    <!-- <script type="text/babel" src="scripts/example.js"></script>-->
-    <script type="text/babel">
-      var CommentBox = React.createClass({
-        render: function() {
-          return (
-                  <div className="commentBox">
-                          Hello, world! I am a CommentBox.
-                  </div>
-          );
-        }
-      });
-      ReactDOM.render(
-              <CommentBox />,
-              document.getElementById('content')
-      );
-    </script>
+   <script type="text/babel" src="scripts/tutorial-raw.js"></script>
+
   </body>
 </html>
